# fork_seclab-taskflows

./: CODEOWNERS  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  publish-to-testpypi.yaml
src/seclab_taskflows/configs/: model_config.yaml  model_config_codeql_python.yaml
src/seclab_taskflows/mcp_servers/: container_shell.py  gh_file_viewer.py  ghsa.py  ghsa_models.py  github_users.py
src/seclab_taskflows/prompts/audit/: known_security_advisories.yaml
src/seclab_taskflows/taskflows/audit/: audit_issue_local_iter.yaml  classify_application_local.yaml  fetch_security_advisories.yaml  identify_applications.yaml
src/seclab_taskflows/taskflows/audit/sosf_workshop/: sloppiness_analyzer.yaml
src/seclab_taskflows/toolboxes/: container_shell_base.yaml  container_shell_malware_analysis.yaml  container_shell_network_analysis.yaml  container_shell_sast.yaml  ghsa.yaml
tests/: test_container_shell.py  test_gh_file_viewer.py
